Results/k8s_files/multicloud-k8s/deployment_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    emco/deployment-id: monitor
  name: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      emco/deployment-id: monitor
  template:
    metadata:
      labels:
        emco/deployment-id: monitor
    spec:
      containers:
      - command:
        - /opt/monitor/monitor
        image: emcov2/monitor:latest
        imagePullPolicy: IfNotPresent
        name: monitor
      serviceAccountName: monitor
