Results/k8s_files/multicloud-k8s/deployment_15_MiDKo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clm
  name: clm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clm
  template:
    metadata:
      labels:
        app: clm
    spec:
      containers:
      - image: emcov2/emco:stable
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 80
        name: clm
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 100m
            ephemeral-storage: 500Mi
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
        - mountPath: /opt/emco/config.json
          name: config
          subPath: config.json
      serviceAccountName: default
      volumes:
      - configMap:
          items:
          - key: config.json
            path: config.json
          name: clm
        name: config
