Results/k8s_files/multicloud-k8s/deployment_3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - env:
        - name: ALLOW_NONE_AUTHENTICATION
          value: 'yes'
        image: bitnami/etcd:3
        imagePullPolicy: IfNotPresent
        name: etcd
        ports:
        - containerPort: 2379
        - containerPort: 2380
