Results/k8s_files/multicloud-k8s/deployment_6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ncm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ncm
  template:
    metadata:
      labels:
        app: ncm
    spec:
      containers:
      - command:
        - /opt/emco/entrypoint
        - ncm
        image: emcov2/emco:stable
        imagePullPolicy: Always
        name: ncm
        ports:
        - containerPort: 9031
        volumeMounts:
        - mountPath: /opt/emco/config.json
          name: config
          subPath: config.json
        workingDir: /opt/emco
      volumes:
      - configMap:
          items:
          - key: config.json
            path: config.json
          name: ncm
        name: config
