Results/k8s_files/multicloud-k8s/deployment_6_MiDKo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ncm
  name: ncm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ncm
  template:
    metadata:
      labels:
        app: ncm
    spec:
      containers:
      - image: emcov2/emco:stable
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 80
        name: ncm
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 100m
            ephemeral-storage: 500Mi
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
        - mountPath: /opt/emco
          name: config
          subPath: config.json
      serviceAccountName: default
      volumes:
      - configMap:
          items:
          - key: config.json
            path: config.json
          name: ncm
        name: config
---
apiVersion: v1
kind: Service
metadata:
  name: ncm
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ncm
  type: ClusterIP
