Results/k8s_files/multicloud-k8s/service_11.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ovnaction
  name: ovnaction
spec:
  ports:
  - name: internal
    port: 9053
    protocol: TCP
    targetPort: 9053
  - name: http
    nodePort: 31181
    port: 9051
    protocol: TCP
    targetPort: 9051
  selector:
    app: ovnaction
  type: NodePort
