Results/k8s_files/multicloud-k8s/service_11_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  name: ovnaction
spec:
  ports:
  - name: port9053
    nodePort: 30053
    port: 9053
    protocol: TCP
    targetPort: 9053
  - name: port9051
    nodePort: 30051
    port: 9051
    protocol: TCP
    targetPort: 9051
  selector:
    app: ovnaction
  type: NodePort
