Results/k8s_files/multicloud-k8s/service_14.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clm
  name: clm
spec:
  ports:
  - name: http
    nodePort: 31856
    port: 9061
    protocol: TCP
    targetPort: 9061
  selector:
    app: clm
  type: NodePort
