Results/k8s_files/multicloud-k8s/service_14_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  name: clm-service
spec:
  ports:
  - port: 9061
    targetPort: 9061
  selector:
    app: clm
  type: NodePort
