Results/k8s_files/multicloud-k8s/service_17.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dcm
  name: dcm
spec:
  ports:
  - name: http
    nodePort: 31877
    port: 9077
    protocol: TCP
    targetPort: 9077
  selector:
    app: dcm
  type: NodePort
