Results/k8s_files/multicloud-k8s/service_17_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dcm
  name: dcm
spec:
  ports:
  - nodePort: 31000
    port: 9077
    targetPort: 9077
  selector:
    app: dcm
  type: NodePort
