Results/k8s_files/multicloud-k8s/service_1_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testchart2
  name: testchart2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: testchart2
  type: ClusterIP
