Results/k8s_files/multicloud-k8s/service_2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: etcd
  name: etcd-cluster
spec:
  ports:
  - port: 2379
    protocol: TCP
  selector:
    app: etcd
  type: ClusterIP
