Results/k8s_files/multicloud-k8s/service_2_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: etcd-cluster
  name: etcd-cluster
spec:
  ports:
  - port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    app: etcd-cluster
  type: ClusterIP
