Results/k8s_files/multicloud-k8s/service_5_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  name: ncm
spec:
  ports:
  - nodePort: 32000
    port: 9031
    targetPort: 9031
  selector:
    app: ncm
  type: NodePort
