Results/k8s_files/multicloud-k8s/service_6.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    pmem-csi.intel.com/deployment: lvm-production
  name: pmem-csi-controller
  namespace: default
spec:
  ports:
  - port: 10000
  selector:
    app: pmem-csi-controller
    pmem-csi.intel.com/deployment: lvm-production
