Results/k8s_files/multicloud-k8s/service_6_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  name: pmem-csi-controller
spec:
  ports:
  - port: 10000
    protocol: TCP
    targetPort: 10000
  selector:
    app: pmem-csi-controller
  type: ClusterIP
