Results/k8s_files/multicloud-k8s/service_7_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pmem-csi-metrics
  name: pmem-csi-metrics
spec:
  ports:
  - name: metrics
    nodePort: 32000
    port: 10010
    targetPort: 10010
  selector:
    app: pmem-csi-metrics
  type: NodePort
