Results/k8s_files/multicloud-k8s/service_8.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rsync
  name: rsync
spec:
  ports:
  - name: internal
    port: 9041
    protocol: TCP
    targetPort: 9041
  selector:
    app: rsync
  type: NodePort
