Results/k8s_files/multicloud-k8s/service_8_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsync-service
spec:
  ports:
  - nodePort: 31000
    port: 9041
    targetPort: 9041
  selector:
    app: rsync
  type: NodePort
