Results/k8s_files/multicloud-k8s/deployment_3_MiDKo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: etcd
  name: etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - image: bitnami/etcd:3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 80
        name: etcd
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 100m
            ephemeral-storage: 500Mi
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts: []
      serviceAccountName: default
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: etcd
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etcd
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: etcd
            port:
              number: 80
        path: /
        pathType: Prefix
